2009-04-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe: Try to load local modules at first.
	* gphotoframe.glade: Modified positions of labels.

2009-04-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe: Divided in modules.

2009-04-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe: Code refactoring (Removed global variables).

2009-04-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.1 release.
	* gphotoframe: Added a blank image and checking the F-Spot database.
	  Use threading for os.walk.  Fixed minor bugs.
	* gphotoframe, gphotoframe.glade: Modified source names.

2009-04-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe (MakePhoto.rotate): EXIF.process_file ->
	  pixbuf.get_option. Droped depend on EXIF.py
	* gphotoframe, gphotoframe.glade: Initial import.