@@ -1,5 +1,0 @@
-import __init__
-
-class Glade(object):
-    glade_dir = __init__.SHARED_DATA_DIR 
-    glade_file = glade_dir + '/gphotoframe.glade'
